bookstack/bookstack.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack-ingressroute
  labels:
    app: bookstack
  namespace: bookstack
spec:
  routes:
  - kind: Rule
    match: Host(`wiki.test.com`)
    services:
    - kind: Service
      name: bookstack-svc
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-svc
  labels:
    app: bookstack
  namespace: bookstack
spec:
  selector:
    app: bookstack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bookstack-deployment
  labels:
    app: bookstack
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
      namespace: bookstack
    spec: 
      restartPolicy: Always
      volumes:
      - name: public-uploads
        persistentVolumeClaim:
          claimName: public-uploads-pvc
      - name: storage-uploads
        persistentVolumeClaim:
          claimName: storage-uploads-pvc
      - name: config
        configMap:
          name: config-configmap
          items:
          - key: .env
            path: .env
      containers:
      - image: solidnerd/bookstack:0.30.4
        name: bookstack
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: public-uploads
          mountPath: "/var/www/bookstack/public/uploads"
        - name: storage-uploads
          mountPath: "/var/www/bookstack/storage/uploads"
        - name: config
          mountPath: /var/www/bookstack/.env
          subPath: .env
